Issue 7058: Command editor toggle button doesn't align with the Command Line toggle button

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -81,11 +81,11 @@
 }
 
 #fbCommandLineHistoryButton {
-    margin-left: 2px;
+    margin: 2px;
 }
 
 #fbToggleCommandLine {
-    margin-right: 2px;
+    margin: 2px;
 }
 
 #fbCommandLine > .textbox-input-box > .textbox-textarea {
